// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaComponent Should render 1`] = `
<rg-fake
  content={[Function FormControl]}
>
  <rg-textarea
    class="ng-untouched ng-pristine ng-valid"
    label="Content"
    ng-reflect-form="[object Object]"
    ng-reflect-label="Content"
  >
    <mat-form-field
      appearance="standard"
      class="w-100 mat-form-field ng-tns-c0-0 mat-primary mat-form-field-type-mat-input mat-form-field-appearance-standard mat-form-field-can-float mat-form-field-should-float ng-untouched ng-pristine ng-valid _mat-animation-noopable"
      ng-reflect-appearance="standard"
    >
      <div
        class="mat-form-field-wrapper"
      >
        <div
          class="mat-form-field-flex"
        >
          
          
          <div
            class="mat-form-field-infix"
          >
            <textarea
              aria-invalid="false"
              aria-required="false"
              class="mat-input-element mat-form-field-autofill-control cdk-text-field-autofill-monitored ng-untouched ng-pristine ng-valid"
              id="mat-input-0"
              matinput=""
              ng-reflect-form="[object Object]"
            />
            <span
              class="mat-form-field-label-wrapper"
            >
              
              <label
                aria-owns="mat-input-0"
                class="mat-form-field-label ng-tns-c0-0 ng-star-inserted"
                for="mat-input-0"
                id="mat-form-field-label-1"
                ng-reflect-disabled="true"
                ng-reflect-ng-switch="true"
              >
                
                
                <mat-label
                  class="ng-star-inserted"
                >
                  Content
                </mat-label>
                
                
              </label>
            </span>
          </div>
          
        </div>
        
        <div
          class="mat-form-field-underline ng-tns-c0-0 ng-star-inserted"
        >
          <span
            class="mat-form-field-ripple"
          />
        </div>
        <div
          class="mat-form-field-subscript-wrapper"
          ng-reflect-ng-switch="hint"
        >
          
          
          <div
            class="mat-form-field-hint-wrapper ng-tns-c0-0 ng-trigger ng-trigger-transitionMessages ng-star-inserted"
            style="opacity:1;transform:translateY(0%);0:opacity;1:transform;"
          >
            
            <div
              class="mat-form-field-hint-spacer"
            />
          </div>
        </div>
      </div>
    </mat-form-field>
  </rg-textarea>
</rg-fake>
`;

exports[`TextareaComponent When adding a value to the textarea and losing focus Should not render an error message 1`] = `
<rg-fake
  content={[Function FormControl]}
>
  <rg-textarea
    class="ng-touched ng-pristine ng-valid"
    label="Content"
    ng-reflect-form="[object Object]"
    ng-reflect-label="Content"
  >
    <mat-form-field
      appearance="standard"
      class="w-100 mat-form-field ng-tns-c2-0 mat-primary mat-form-field-type-mat-input mat-form-field-appearance-standard mat-form-field-can-float ng-touched ng-pristine _mat-animation-noopable mat-form-field-should-float ng-valid"
      ng-reflect-appearance="standard"
    >
      <div
        class="mat-form-field-wrapper"
      >
        <div
          class="mat-form-field-flex"
        >
          
          
          <div
            class="mat-form-field-infix"
          >
            <textarea
              aria-invalid="false"
              aria-required="false"
              class="mat-input-element mat-form-field-autofill-control cdk-text-field-autofill-monitored ng-touched ng-pristine ng-valid"
              id="mat-input-2"
              matinput=""
              ng-reflect-form="[object Object]"
            />
            <span
              class="mat-form-field-label-wrapper"
            >
              
              <label
                aria-owns="mat-input-2"
                class="mat-form-field-label ng-tns-c2-0 ng-star-inserted"
                for="mat-input-2"
                id="mat-form-field-label-5"
                ng-reflect-disabled="true"
                ng-reflect-ng-switch="true"
              >
                
                
                <mat-label
                  class="ng-star-inserted"
                >
                  Content
                </mat-label>
                
                
              </label>
            </span>
          </div>
          
        </div>
        
        <div
          class="mat-form-field-underline ng-tns-c2-0 ng-star-inserted"
        >
          <span
            class="mat-form-field-ripple"
          />
        </div>
        <div
          class="mat-form-field-subscript-wrapper"
          ng-reflect-ng-switch="hint"
        >
          
          
          <div
            class="mat-form-field-hint-wrapper ng-tns-c2-0 ng-trigger ng-trigger-transitionMessages ng-star-inserted"
            style="opacity:1;transform:translateY(0%);0:opacity;1:transform;"
          >
            
            <div
              class="mat-form-field-hint-spacer"
            />
          </div>
        </div>
      </div>
    </mat-form-field>
  </rg-textarea>
</rg-fake>
`;

exports[`TextareaComponent When clearing the textarea and losing focus Should render an error message 1`] = `
<rg-fake
  content={[Function FormControl]}
>
  <rg-textarea
    class="ng-pristine ng-invalid ng-touched"
    label="Content"
    ng-reflect-form="[object Object]"
    ng-reflect-label="Content"
  >
    <mat-form-field
      appearance="standard"
      class="w-100 mat-form-field ng-tns-c1-0 mat-primary mat-form-field-type-mat-input mat-form-field-appearance-standard mat-form-field-can-float ng-pristine _mat-animation-noopable mat-form-field-hide-placeholder ng-invalid mat-form-field-invalid ng-touched"
      ng-reflect-appearance="standard"
    >
      <div
        class="mat-form-field-wrapper"
      >
        <div
          class="mat-form-field-flex"
        >
          
          
          <div
            class="mat-form-field-infix"
          >
            <textarea
              aria-describedby="mat-error-0"
              aria-invalid="true"
              aria-required="false"
              class="mat-input-element mat-form-field-autofill-control cdk-text-field-autofill-monitored ng-pristine ng-invalid ng-touched"
              id="mat-input-1"
              matinput=""
              ng-reflect-form="[object Object]"
            />
            <span
              class="mat-form-field-label-wrapper"
            >
              
              <label
                aria-owns="mat-input-1"
                class="mat-form-field-label ng-tns-c1-0 ng-star-inserted mat-empty mat-form-field-empty"
                for="mat-input-1"
                id="mat-form-field-label-3"
                ng-reflect-disabled="true"
                ng-reflect-ng-switch="true"
              >
                
                
                <mat-label
                  class="ng-star-inserted"
                >
                  Content
                </mat-label>
                
                
              </label>
            </span>
          </div>
          
        </div>
        
        <div
          class="mat-form-field-underline ng-tns-c1-0 ng-star-inserted"
        >
          <span
            class="mat-form-field-ripple"
          />
        </div>
        <div
          class="mat-form-field-subscript-wrapper"
          ng-reflect-ng-switch="error"
        >
          
          <div
            class="ng-tns-c1-0 ng-trigger ng-trigger-transitionMessages ng-star-inserted ng-animating"
            style=""
          >
            
            <mat-error
              class="mat-error ng-star-inserted"
              id="mat-error-0"
              role="alert"
            >
               This field is required 
            </mat-error>
          </div>
          
        </div>
      </div>
    </mat-form-field>
  </rg-textarea>
</rg-fake>
`;
